--- a/server/djangoapp/templates/djangoapp/dealer_details.html
+++ b/server/djangoapp/templates/djangoapp/dealer_details.html
@@ -5,69 +5,78 @@
     <title>Dealership Review</title>
     {% load static %}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
 </head>
 
-    <body>
+<body>
+<nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+        <div class="navbar-header">
+              <a class="navbar-brand" href="{% url 'djangoapp:about' %}">Dealerships</a>
+        </div>
+        <ul class="nav navbar-nav navbar-right">
+            {% if user.is_authenticated %}
+            <li>
+                <a class="btn btn-link" href="{% url 'djangoapp:add_review' dealer.id%}">Add Review</a>
+                <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
+                <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
+            </li>
+            {% else %}
+            <li>
+                <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                    {% csrf_token %}
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Username" name="username" >
+                        <input type="password" class="form-control" placeholder="Username" name="psw" >
+                        <button class="btn btn-primary" type="submit">Login</button>
+                        <a class="btn btn-link" href="{% url 'djangoapp:registration' %}">Sign Up</a>
+                    </div>
+                </form>
+            </li>
+            {% endif %}
+        </ul>
+    </div>
+</nav>
 
-        <nav class="navbar navbar-light bg-light navbar-expand-lg">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="{% url 'djangoapp:index' %}">BestCar DealerShip Website</a>
-                <div class="collapse navbar-collapse" id="navbarText">
-                    <ul style="justify-content:left;" class="navbar-nav">
-                        <li class="navbar-brand">
-                            <a class="nav-link" href="{% url 'djangoapp:about' %}">About Us</a>
-                        </li>
-                        <li class="navbar-brand">
-                            <a class="nav-link" href="{% url 'djangoapp:contact' %}">Contact Us</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="nav navbar-nav navbar-right">
-                    {% if user.is_authenticated %}
-                    <li>
-                        <a class="btn btn-link" href="{% url 'djangoapp:add_review' dealer.id%}">Add Review</a>>
-                        <a class="btn btn-link" href="#">{{ user.first_name }} ({{ user.username }})</a>
-                        <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
-                    </li>
-                    {% else %}
-                    <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
-                        {% csrf_token %}
-                        <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Username" name="username" >
-                            <input type="password" class="form-control" placeholder="Password" name="psw" >
-                            <button class="btn btn-primary" type="submit">Login</button>
-                            <a class="nav-link" style="font-size:15px" href="{% url 'djangoapp:registration' %}">Sign Up</a>
-                        </div>
-                    </form>
-                    {% endif %}
-                </div>
-            </div>
-        </nav>
-    
-        <h1>Reviews for {{ dealer.full_name }}</h1>
-        <hr>
-        <!-- Add reviews as cards -->
+<div class="container-fluid">
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-warning" role="alert">{{ message }}</div>
+        {% endfor %}
+    {% endif %}
+
+    <h3>Reviews for <b>{{dealer.full_name}}</b></h3>
+
+    <div class="container">
         <div class="card-columns">
             {% for review in reviews %}
+            <div class="col-auto mb-3">
                 <div class="card">
                     {% if review.sentiment == "positive" %}
-                    <img class="card-img-left" src="{{ MEDIA_URL }}/emoji/positive.png"/>
-                    {% elif review.sentiment == "neutral" %}
-                     <img class="card-img-left" src="{{ MEDIA_URL }}/emoji/neutral.png"/>
-                    {% else %}
-                     <img class="card-img-left" src="{{ MEDIA_URL }}/emoji/negative.png"/>
+                        <img class="card-img-left" src="{{MEDIA_URL}}/emoji/positive.png" width="36px" height="36px"
+                             alt="Sentiment">
+                    {% elif review.sentiment == "negative" %}
+                        <img class="card-img-left" src="{{MEDIA_URL}}/emoji/negative.png" width="36px" height="36px"
+                                   alt="Sentiment">
+                        {% else %}
+                        <img class="card-img-left" src="{{MEDIA_URL}}/emoji/neutral.png" width="36px" height="36px"
+                                   alt="Sentiment">
                     {% endif %}
-    
-                    <div class="card-body">
-                        <p class="card-title">{{ review.car_make }}, {{ review.car_model }}</p>
-                        <p class="card-title">{{ review.car_year }}</p>
-                        <p class="card-text">{{ review.review }}</p>
+                    <div class="card-body bg-light">
+                              {% if review.car_make%}
+                                  <h5 class="card-title">{{review.car_make}}, {{review.car_model}} </h5>
+                                  <h5 class="card-title">{{review.car_year}}</h5>
+                               {% endif %}
+                              <p class="card-text">{{review.review}}</p>
                     </div>
                 </div>
+            </div>
             {% endfor %}
         </div>
-    
+    </div>
+</div>
 
-    </body>
+</body>
+
 
 </html>
